# levindorge

./: .dockerignore  .env.exemple  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.fastapi  Dockerfile.flask  Makefile  app.py  compose-dev.yaml  compose-prod.yaml  compose-traefik.yaml  compose.yaml  eslint.config.mjs  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: deploy-branch.yml  docker.yml  lint.yml  release-please.yml  tests.yml
app/: config.py  main.py  worker.py
app/_to_remove/static/: levindorge.js  prices.js
app/_to_remove/templates/: article_list.html  error.html  home.html  login.html  navbar.html
app/api/: api.py  app.py  dependencies.py  filters.py  handlers.py  main.py  navbar.py  security.py  templates.py  utils.py
app/api/articles/: dtos.py  router.py  utils.py
app/api/auth/: dependencies.py  router.py
app/api/categories/: router.py
app/api/deposits/: dtos.py  router.py
app/api/distributors/: dtos.py  router.py
app/api/inventories/: router.py
app/api/items/: router.py
app/api/origins/: dtos.py  router.py
app/api/price_labels/: dtos.py  router.py
app/api/producers/: dtos.py  router.py
app/api/security/: entities.py  password.py  token.py
app/api/stores/: dtos.py  router.py
app/api/volumes/: dtos.py  router.py
app/app/: app.py  dependencies.py  filters.py  handlers.py  utils.py
app/app/articles/: dtos.py  router.py
app/app/auth/: dependencies.py  router.py  security.py
app/app/deposits/: router.py
app/app/inventories/: router.py
app/app/items/: router.py
app/app/price_labels/: router.py
app/app/volumes/: router.py
app/application/templates/: article_list.html  article_list_glob.html  articles.html  (+7 more)
app/blueprints/: articles.py  auth.py  inventory.py  items.py  tags.py  tasks.py
app/core/: api.py  app.py  config.py  context.py  core.py  event_handler.py  logfire.py  paths.py  templates.py  uow.py
app/domain/: caching.py  context.py  domain.py  entities.py  exceptions.py  filters.py  repository.py  types.py
app/entities/: article.py  deposit.py  inventory.py  item.py  shop.py  volume.py
app/event_handler/: app.py  dependencies.py  router.py
app/infrastructure/: event_publisher.py  mongo_uow.py  repository.py  repository_.py  utils.py
app/interfaces/: repository.py
app/logging/: config.json  formatter.py
app/repository/: client.py  dependencies.py  mongodb.py
app/static/: levindorge.css  levindorge.js  prices.js
app/templates/: article_list.html  articles_to_validate.html  base.html  deposits.html  inventory.html  login.html  navbar.html  register.html  volumes.html
app/use_cases/: articles.py  inventory.py  items.py  tactill.py  tags.py  wizishop.py
app/utils/: tag.py  utils.py
application/: config.py  data.py  main.py
application/blueprints/: articles.py  auth.py  inventory.py  items.py  tags.py
application/entities/: article.py  inventory.py  tag.py
application/interfaces/: repository.py
application/repository/: client.py  dependencies.py  mongodb.py
application/templates/: article_create.html  article_list.html  article_list_glob.html  article_price.html  article_update.html  articles_to_validate.html  base.html  demo_base.html  demo_list.html  demo_navbar.html  error.html  inventory.html  inventory_list.html  item_list.html  login.html  messages.html  navbar.html  tag_files_list.html
application/use_cases/: articles.py  inventory.py  items.py  tactill.py  tags.py
data/: categories.py  origins.py  stores.py
scripts/: category_groups.py  cli.py  database.py  dev.sh  migration.py  migration_.py  search.py  utils.py
scripts/clean/: dashboard.py  entities.py  main.py  pos.py
scripts/migration/: articles.py  categories.py  cli.py  deposits.py  distributors.py  inventories.py  main.py  origins.py  producers.py  stores.py  users.py  utils.py  volumes.py
scripts/tactill/: main.py
static/css/: levindorge.css  style_spirit.css  style_spirit_position.css
static/js/: levindorge.js
templates/: article_create.html  article_list.html  article_list_glob.html  article_price.html  article_update.html  articles_to_validate.html  base.html  demo_list.html  demo_navbar.html  dropdown_list.html  error.html  inventory.html  item_list.html  login.html  navbar.html
templates/tags/: base_lg.html  base_sm.html  tags_list.html
tests/: conftest.py  data.py  test_init.py  test_utils.py  utils.py
tests/end_to_end/: articles.py  conftest.py  test_articles.py
tests/factories/: articles.py  base.py  categories.py  deposits.py  distributors.py  mongo.py  origins.py  producers.py  stores.py  users.py  utils.py  volumes.py
tests/fixtures/: articles.py  database.py  factories.py  repositories.py
tests/integration/: conftest.py  data.py  test_articles.py  test_items.py  test_tags.py
tests/repository/: test_categories.py  test_create.py  test_get_all.py  test_stores.py  test_users.py
utils/: mongo_db.py  tactill.py  tag.py  vdo.py
(+269 files in other folders)
