[project]
name = "levindorge"
version = "0.6.0"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.2.0",
    "cleanstack",
    "fastapi==0.122.0",
    "faststream[cli,redis]==0.5.48",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "logfire[fastapi,pymongo]==4.15.1",
    "pillow==12.0.0",
    "pwdlib[argon2,bcrypt]==0.3.0",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pymongo==4.15.4",
    "python-multipart==0.0.20",
    "tactill",
    "tenacity==9.1.2",
    "unidecode==1.4.0",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.6",
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pre-commit==4.5.0",
    "polyfactory==3.1.0",
]

[tool.uv.sources]
tactill = { git = "https://github.com/julienpillaud/tactill.git", tag = "0.7.0" }
cleanstack = { git = "https://github.com/julienpillaud/cleanstack", tag = "0.7.0" }

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",  # ruff
]
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']
