[project]
name = "levindorge"
# use dynamic version to avoid sync issues with uv.lock after 'release-please'
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "cleanstack",
    "fastapi==0.128.0",
    "faststream[cli,rabbit]==0.6.5",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "logfire[fastapi,pymongo]==4.19.0",
    "pillow==12.1.0",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pymongo==4.16.0",
    "python-multipart==0.0.21",
    "redis==7.1.0",
    "supabase==2.27.2",
    "tactill",
    "tenacity==9.1.2",
    "unidecode==1.4.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.14",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pre-commit==4.5.1",
    "ty==0.0.13",
    "faker==40.1.2",
]

[tool.uv.sources]
tactill = { git = "https://github.com/julienpillaud/tactill.git", tag = "0.7.0" }
cleanstack = { git = "https://github.com/julienpillaud/cleanstack", tag = "0.8.0" }

# disable automatic discovery (find node_modules as a top-level package, why ?)
[tool.setuptools]
packages = ["app"]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",  # ruff
]
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']
