[project]
name = "levindorge"
# use dynamic version to avoid sync issues with uv.lock after 'release-please'
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "cleanstack[mongo]",
    "fastapi==0.135.1",
    "faststream[cli,rabbit]==0.6.7",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "logfire[fastapi,pymongo,redis]==4.29.0",
    "pillow==12.1.1",
    "pydantic-settings==2.13.1",
    "pyjwt==2.11.0",
    "pymongo==4.16.0",
    "python-multipart==0.0.22",
    "redis==7.3.0",
    "supabase==2.28.2",
    "tactill",
    "tenacity==9.1.4",
    "unidecode==1.4.0",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.6",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pre-commit>=4",
    "faker>=40",
]

[tool.uv.sources]
tactill = { git = "https://github.com/julienpillaud/tactill.git", tag = "0.8.1" }
cleanstack = { git = "https://github.com/julienpillaud/cleanstack", tag = "0.16.3" }

# disable automatic discovery (find node_modules as a top-level package, why ?)
[tool.setuptools]
packages = ["app"]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF", # ruff
]
ignore = [
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
disable_error_code = [
    # Decorators on top of @property are not supported,
    # but pydantic use it
    "prop-decorator"
]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
